# libpsca

./: CMakeLists.txt  README.md  doxy.config.in
doc/: mainpage.dox
examples/: CMakeLists.txt  auto.c
lib/: CMakeLists.txt  psca.c  psca.h  psca_config.h.in  psca_malloc.c  version.h.in
